adds key controls, star info and more stars

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </style>
   </head>
   <body>
-    <div id="info"></div>
+    <div id="info">Click a star to get options.</div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
