--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
       #info > p {
         margin: 1em;
       }
+      footer {
+        position: fixed;
+        bottom: .5em;
+        right: 1em;
+        text-align: right;
+      }
       label {
         position: fixed;
         top: 0;
@@ -141,6 +147,12 @@
       </p>
     </div>
     <div id="labels"></div>
+    <footer>
+      An experiment by
+      <a target="_blank" rel="noopener" href="https://koehr.ing">koehr</a> |
+      © 2023 - today |
+      <a target="_blank" rel="noopener" href="https://git.koehr.ing/n/stellar-neighbours">open source</a>
+    </footer>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
