--- a/index.html
+++ b/index.html
@@ -154,5 +154,7 @@
       <a target="_blank" rel="noopener" href="https://git.koehr.ing/n/stellar-neighbours">open source</a>
     </footer>
     <script type="module" src="/src/main.ts"></script>
+    <script data-goatcounter="https://stellar-neighbourhood.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
   </body>
 </html>
